# aiida-feff

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  coding_style.md  contributing.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: example_ensemble.py  example_ensemble_synthetic.py  example_single_site.py
src/aiida_feff/: cli.py  utils.py  visualise.py
src/aiida_feff/calcfunctions/: debye_waller.py  larch.py  path_contributions.py
src/aiida_feff/calculations/: _aggregate_paths.py  _run_batch.py  feff.py  feff_batch.py
src/aiida_feff/data/: parameters.py  pathcontributions.py  xasdata.py
src/aiida_feff/parsers/: feff.py  feff_batch.py
src/aiida_feff/workflows/: ensemble.py
tests/: conftest.py  test_aggregate_paths.py  test_calcfunctions.py  test_calculations.py  test_data.py  test_debye_waller.py  test_debye_waller_non_orthogonal.py  test_parsers.py  test_path_contributions.py
